fixed navbar whitespacing

--- a/src/scss/_customized-bootstrap-variables.scss
+++ b/src/scss/_customized-bootstrap-variables.scss
@@ -1078,7 +1078,7 @@
     // $navbar-padding-y: $spacer * .5; $navbar-padding-y: $navbar-padding-y !global; // $spacer * .5
     // $navbar-padding-x: null; $navbar-padding-x: $navbar-padding-x !global; // null
 
-    $navbar-nav-link-padding-x: 1rem; $navbar-nav-link-padding-x: $navbar-nav-link-padding-x !global; // .5rem
+    // $navbar-nav-link-padding-x: .5rem; $navbar-nav-link-padding-x: $navbar-nav-link-padding-x !global; // .5rem
 
     // $navbar-brand-font-size: $font-size-lg; $navbar-brand-font-size: $navbar-brand-font-size !global; // $font-size-lg
     // Compute the navbar-brand padding-y so the navbar-brand will have the same height as navbar-text and nav-link
